Fix for page jumping

--- a/css/style.less
+++ b/css/style.less
@@ -110,6 +110,7 @@ a {
 #main-container {
     width: 100%;
     margin-bottom: 100px;
+    overflow: hidden;
 }
 
 .section {
